# wordle_searcher

./: Cargo.toml  readme.md
solver/: Cargo.toml
solver/src/: lib.rs  main.rs
solver/src/solvers/: mod.rs
solver/src/solvers/wordle/: dynamic_wordle_solver.rs  fixed_size_wordle_solver.rs  mod.rs
solver_web/: Cargo.toml  index.html
solver_web/src/: corpus_loader.rs  game.rs  main.rs
src/: main.rs
